# ai-lab

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pytest.ini
apps/desktop/: index.html  package.json  tsconfig.tsbuildinfo
apps/desktop/electron/: main.cjs  preload.cjs
infra/docker/: docker-compose.yml
ops/: backup_events.sh  bootstrap_local.sh  healthcheck.sh  replay_drill.sh
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/: routes.py
services/api/app/core/: config.py
services/api/app/db/: base.py  models.py
services/api/app/reducers/: world_state.py
services/api/app/schemas/: api.py
services/api/app/services/: commands.py  event_store.py  projections.py  queue.py  upcasters.py
services/api/app/ws/: manager.py
services/sandbox/: Dockerfile  pyproject.toml
services/sandbox/app/: config.py  executor.py  main.py  schemas.py
services/worker/: Dockerfile  pyproject.toml
services/worker/worker/: dramatiq_app.py  jobs.py  main.py
services/worker/worker/agents/: critic.py  planner.py  researcher.py
services/worker/worker/core/: api_client.py  config.py  heartbeat.py  run_lock.py
services/worker/worker/models/: router.py
services/worker/worker/queue/: broker.py
services/worker/worker/tools/: sandbox.py
tests/: test_agents_logic.py  test_event_store.py  test_event_validation.py  test_model_router.py  test_policy.py  test_queue_dispatcher.py  test_reducer.py  test_run_transitions.py  test_sandbox_runner.py  test_upcasters.py  test_worker_jobs_flow.py
(+8 files in other folders)
