[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab-api"
version = "0.1.0"
description = "FastAPI API service for AI Lab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "redis>=5.0",
  "rq>=1.16",
  "prometheus-client>=0.20",
  "python-dateutil>=2.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
