[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab-sandbox"
version = "0.1.0"
description = "Sandbox runner service for AI Lab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "docker>=7.1",
  "requests>=2.32",
  "pydantic>=2.8",
  "ailab-policy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
