[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab-worker"
version = "0.1.0"
description = "Worker runtime for AI Lab"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "redis>=5.0",
  "rq>=1.16",
  "pydantic>=2.8",
  "ailab-domain",
  "ailab-policy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
